--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ sudo: required
 services:
   - docker
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  - curl -OLS https://d149oh3iywgk04.cloudfront.net/dwnldmgr/HANA2latest/HXEDownloadManager.jar
+  - java -jar HXEDownloadManager.jar
+  
 script:
   - echo "Build local image"
   - docker build -t hana .
