--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - sleep 3 # give xvfb some time to start
   # - java -jar HXEDownloadManager-01.jar
   # - curl -v -OLS https://d149oh3iywgk04.cloudfront.net/dwnldmgr/HANA2latest/HXEDownloadManager.jar
-  - wget --referer=https://go.sap.com https://d149oh3iywgk04.cloudfront.net/dwnldmgr/HANA2latest/HXEDownloadManager.jar
+  - wget -d --referer=https://go.sap.com https://d149oh3iywgk04.cloudfront.net/dwnldmgr/HANA2latest/HXEDownloadManager.jar
   - java -jar HXEDownloadManager.jar
   
 script:
