--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - sleep 3 # give xvfb some time to start
   # - java -jar HXEDownloadManager-01.jar
   # - curl -v -OLS https://d149oh3iywgk04.cloudfront.net/hanaexpress/HANA2latest/linuxx86-64/tar/hxe.tgz
-  - wget -d --referer="https://go.sap.com" --head="Host: localhost" https://d149oh3iywgk04.cloudfront.net/hanaexpress/HANA2latest/linuxx86-64/tar/hxe.tgz
+  - wget -d --referer='https://go.sap.com' --head='Host: localhost' https://d149oh3iywgk04.cloudfront.net/hanaexpress/HANA2latest/linuxx86-64/tar/hxe.tgz
   - java -jar HXEDownloadManager.jar
   
 script:
